--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your portfolio</title>
+    <title>Santiago Locatelli</title>
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -16,7 +16,7 @@
         <div class="nav-row">
           <!-- Logo with link to the homepage -->
           <a href="./index.html" class="logo"
-            ><strong>Your</strong> portfolio</a
+            ><strong>Santiago Locatelli</strong></a
           >
 
           <!-- Dark mode toggle button -->
@@ -90,26 +90,19 @@
           <!-- Social media links -->
           <ul class="social">
             <li class="social__item">
-              <a href="#!"><img src="./img/icons/vk.svg" alt="Link" /></a>
+              <a href="https://github.com/SantiagoLocatelli" target="_blank" aria-label="GitHub profile">
+                <img src="./img/icons/gitHub.svg" alt="Link" />
+              </a>
             </li>
             <li class="social__item">
-              <a href="#!"
-                ><img src="./img/icons/instagram.svg" alt="Link"
-              /></a>
-            </li>
-            <li class="social__item">
-              <a href="#!"><img src="./img/icons/twitter.svg" alt="Link" /></a>
-            </li>
-            <li class="social__item">
-              <a href="#!"><img src="./img/icons/gitHub.svg" alt="Link" /></a>
-            </li>
-            <li class="social__item">
-              <a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link" /></a>
+              <a href="https://www.linkedin.com/in/santiago-locatelli/" target="_blank" aria-label="LinkedIn profile">
+                <img src="./img/icons/linkedIn.svg" alt="Link" />
+              </a>
             </li>
           </ul>
           <!-- Copyright information -->
           <div class="copyright">
-            <p>© 2025 Bainda</p>
+            <p>© 2025 Santiago Locatelli. All rights reserved.</p>
           </div>
         </div>
       </div>
