--- a/contacts.html
+++ b/contacts.html
@@ -63,19 +63,19 @@
           <!-- Location information -->
           <li class="content-list__item">
             <h2 class="title-2">Location</h2>
-            <p>Tbilisi, Georgia</p>
+            <p>Melbourne, Australia</p>
           </li>
           <!-- Contact number with Telegram/WhatsApp link -->
           <li class="content-list__item">
             <h2 class="title-2">Telegram / WhatsApp</h2>
-            <p><a href="tel:+79051234567">+995 568 12 34 56</a></p>
+            <p><a href="tel:+79051234567">+61 0428194962</a></p>
           </li>
           <!-- Email address with mailto link -->
           <li class="content-list__item">
             <h2 class="title-2">Email</h2>
             <p>
-              <a href="mailto:webdev@protonmail.com"
-                >giorgibainda14@gmail.com</a
+              <a href="mailto:sntglocatelli@gmail.com"
+                >sntglocatelli@gmail.com</a
               >
             </p>
           </li>
