--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,8 @@
         <h2 class="title-1">Projects</h2>
         <ul class="projects">
           <li class="project">
-            <a href="https://github.com/SantiagoLocatelli/Counter-Strike-2D" target="_blank" class="project__link">
+            <a href="./projects/cs2d.html" class="project__link">
+              <!-- <a href="https://github.com/SantiagoLocatelli/Counter-Strike-2D" target="_blank" class="project__link"> -->
               <img src="./img/projects/cs2d.png" alt="Counter-Strike 2D" class="project__img" />
               <h3 class="project__title">Counter-Strike 2D</h3>
             </a>
