--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             </a>
           </li>
           <li class="project">
-            <a href="https://www.tramites.catastro.misiones.gov.ar/login" target="_blank" class="project__link">
+            <a href="./projects/cdg.html" class="project__link">
               <img src="./img/projects/cdg.png" alt="Government Platform" class="project__img" />
               <h3 class="project__title">Cadastre Management Platform</h3>
             </a>
