action fintech page

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li class="project">
-            <a href="https://www.actionfintech.com/" target="_blank" class="project__link">
+            <a href="./projects/fintech.html" class="project__link">
               <img src="./img/projects/actionfintech_cover.jpg" alt="Fintech Platform" class="project__img" />
               <h3 class="project__title">Fintech System Maintenance</h3>
             </a>
