fix action fintech y boton

--- a/projects/fintech.html
+++ b/projects/fintech.html
@@ -17,10 +17,11 @@
 
     <main class="section">
       <div class="container">
+        <a href="../projects.html" class="btn-outline" style="margin-bottom: 2rem; display: inline-block;">← Back to Projects</a>
         <div class="project-details">
           <h1 class="title-1">Fintech System</h1>
           <img
-            src="../img/fintech-system-card.png"
+            src="../img/projects/actionfintech_cover.jpg"
             alt="Fintech System Preview"
             class="project-details__cover"
           />
@@ -33,7 +34,7 @@
               <p><strong>Technologies:</strong> C#, .NET Core, Mifos X, Mobex API, Docker, Git</p>
             </li>
             <li class="content-list__item">
-              <p><strong>Web Site:</strong> <a href="https://www.actionfintech.com/"></a> </p>
+              <p><strong>Web Site:</strong> <a href="https://www.actionfintech.com/">Action Fintech</a> </p>
             </li>
             <li class="content-list__item">
               <p>
