--- a/projects/cs2d.html
+++ b/projects/cs2d.html
@@ -17,6 +17,7 @@
 
     <main class="section">
       <div class="container">
+        <a href="../projects.html" class="btn-outline" style="margin-bottom: 2rem; display: inline-block;">← Back to Projects</a>
         <div class="project-details">
           <h1 class="title-1">Counter-Strike 2D</h1>
           <img
