--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
             </a>
           </li>
           <li class="project">
-            <a href="https://www.tdi.com.ar/servicios?id=sigedu" target="_blank" class="project__link">
+            <a href="./projects/sigedu.html" class="project__link">
               <img src="./img/projects/BANNER_SIGEDU.webp" alt="University System" class="project__img" />
               <h3 class="project__title">University Platform Migration</h3>
             </a>
