--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <img src="./img/profile.jpeg" alt="Photo of Santiago Locatelli" class="whoami__photo" />
               <div class="whoami__text">
                 <h2 class="title-2">Who am I?</h2>
-                <p>
+                <p class="index_text">
                   I'm Santiago Locatelli, a Full Stack Developer from Argentina with a strong foundation in software engineering and a mindset focused on growth. I bring a blend of technical curiosity and clear communication, forged through years of self-driven learning and teaching. I thrive in environments where problem-solving meets purpose — where building software means creating impact.
                 </p>
               </div>
@@ -68,7 +68,7 @@
           
           <li class="content-list__item">
             <h2 class="title-2">What have I done?</h2>
-            <p>
+            <p class="index_text">
               I’ve worked on a wide range of real-world and academic projects — from building financial and government platforms to contributing to educational systems and mentoring environments. My experience spans both frontend and backend development, with a strong focus on clean architecture, performance, and scalability. Along the way, I’ve also explored game development and personal projects that helped me sharpen my problem-solving and design skills. You can explore them in detail on the <a href="./projects.html">Projects</a> page.
             </p>
           </li>
