teaching assistant page

--- a/projects.html
+++ b/projects.html
@@ -55,8 +55,10 @@
             </a>
           </li>
           <li class="project">
-            <img src="./img/projects/logo_institucion.png" alt="Teaching Contributions" class="project__img" />
-            <h3 class="project__title">University-Level Teaching & Course development</h3>
+            <a href="./projects/uba.html">
+              <img src="./img/projects/logo_institucion.png" alt="Teaching Contributions" class="project__img" />
+              <h3 class="project__title">University-Level Teaching & Course development</h3>
+            </a>
           </li>
         </ul>
       </div>
