--- a/projects/uba.html
+++ b/projects/uba.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>University Platform</title>
+    <title>University Tutoring</title>
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
@@ -19,28 +19,30 @@
       <div class="container">
         <a href="../projects.html" class="btn-outline" style="margin-bottom: 2rem; display: inline-block;">← Back to Projects</a>
         <div class="project-details">
-          <h1 class="title-1">University Platform (SIGEDU)</h1>
+          <h1 class="title-1">University Tutoring</h1>
           <img
-            src="../img/projects/BANNER_SIGEDU.webp"
-            alt="University Platform Preview"
+            src="../img/projects/logo_institucion.png"
+            alt="University Tutoring Preview"
             class="project-details__cover"
           />
           <div class="project-details__desc">
-            SIGEDU is a modular digital platform for academic and administrative management in universities and technical institutes. 
-            It supports student enrollment, course scheduling, evaluation tracking, financial control, and reporting—all within a centralized system.
+            During my time as a Teaching Assistant at the University of Buenos Aires, I played an active role in the academic development of students in introductory computing courses. 
+            My responsibilities extended beyond technical instruction to include meaningful human engagement and mentorship.
           </div>
           <ul class="content-list">
             <li class="content-list__item">
-              <p><strong>Technologies:</strong> Web-based platform, PHP, MySQL, JavaScript, REST APIs</p>
-            </li>
-            <li class="content-list__item">
-              <p><strong>Web Site:</strong> <a href="https://www.tdi.com.ar/servicios?id=sigedu">SIGEDU</a> </p>
+              <p><strong>Responsibilities:</strong> Planning and teaching practical classes, preparing and correcting exams, designing exercises and assignments, conducting feedback sessions, and offering one-on-one student support.</p>
             </li>
             <li class="content-list__item">
               <p>
-                SIGEDU integrates academic processes (such as subject planning, student records, exams, and grades) with institutional back-office operations 
-                (like tuition billing and reporting). Its modular design allows universities to adopt only the components they need. 
-                The system is fully web-based and optimized for public and private institutions across Latin America.
+                <strong>Courses:</strong> Algorithms and Programming I, Algorithmic Logic (Faculty of Engineering and CBC),
+                <a href="https://www.fi.uba.ar/" target="_blank">UBA</a>    
+            </p>
+            </li>
+            <li class="content-list__item">
+              <p>
+                This experience significantly enhanced my communication and leadership skills. I learned how to adapt complex technical topics to diverse learning styles, foster group discussion, and support students both academically and personally. 
+                It reinforced my belief that teaching is a two-way process—one that cultivates empathy, patience, and a deep understanding of human connection in technical environments.
               </p>
             </li>
           </ul>
