--- a/footer.html
+++ b/footer.html
@@ -6,12 +6,12 @@
           <ul class="social">
             <li class="social__item">
               <a href="https://github.com/SantiagoLocatelli" target="_blank" aria-label="GitHub profile">
-                <img src="./img/icons/gitHub.svg" alt="GitHub" />
+                <img src="/img/icons/gitHub.svg" alt="GitHub" />
               </a>
             </li>
             <li class="social__item">
               <a href="https://www.linkedin.com/in/santiago-locatelli/" target="_blank" aria-label="LinkedIn profile">
-                <img src="./img/icons/linkedIn.svg" alt="LinkedIn" />
+                <img src="/img/icons/linkedIn.svg" alt="LinkedIn" />
               </a>
             </li>
           </ul>
