active tab fixed

--- a/contacts.html
+++ b/contacts.html
@@ -52,6 +52,17 @@
         .then(response => response.text())
         .then(data => {
           document.getElementById("navbar").innerHTML = data;
+
+          // Una vez que el navbar está insertado, ejecutar lógica para marcar el tab activa
+          const currentPath = window.location.pathname;
+          const navLinks = document.querySelectorAll(".nav-list__link");
+
+          navLinks.forEach(link => {
+            // Comparar el href del link con la ruta actual
+            if (currentPath.endsWith(link.getAttribute("href"))) {
+              link.classList.add("nav-list__link--active");
+            }
+          });
         });
     </script>
 
