--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
         </button>
         <ul class="nav-list">
         <li class="nav-list__item"><a href="/index.html" class="nav-list__link">Home</a></li>
-        <li class="nav-list__item"><a href="/projects.html" class="nav-list__link nav-list__link--active">Projects</a></li>
+        <li class="nav-list__item"><a href="/projects.html" class="nav-list__link">Projects</a></li>
         <li class="nav-list__item"><a href="/contacts.html" class="nav-list__link">Contacts</a></li>
         </ul>
     </div>
