--- a/contacts.html
+++ b/contacts.html
@@ -34,39 +34,23 @@
             <h2 class="title-2">Email</h2>
             <p>
               <a href="mailto:sntglocatelli@gmail.com"
-                >sntglocatelli@gmail.com</a
-              >
+                >sntglocatelli@gmail.com</a>
             </p>
           </li>
         </ul>
       </div>
     </main>
     <div id="footer-container"></div>
+    <script src="./js/main.js"></script>
     <script>
       fetch("/footer.html")
         .then(response => response.text())
         .then(data => {
           document.getElementById("footer-container").innerHTML = data;
         });
-      fetch("/navbar.html")
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById("navbar").innerHTML = data;
-
-          // Una vez que el navbar está insertado, ejecutar lógica para marcar el tab activa
-          const currentPath = window.location.pathname;
-          const navLinks = document.querySelectorAll(".nav-list__link");
-
-          navLinks.forEach(link => {
-            // Comparar el href del link con la ruta actual
-            if (currentPath.endsWith(link.getAttribute("href"))) {
-              link.classList.add("nav-list__link--active");
-            }
-          });
-        });
+        loadNavbar();
     </script>
 
     <!-- Link to external JavaScript file -->
-    <script src="./js/main.js"></script>
   </body>
 </html>
