--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="footer-container"></div>
     <script src="./js/main.js"></script>
     <script>
-      fetch("/footer.html")
+      fetch("/resume/footer.html")
         .then(response => response.text())
         .then(data => {
           document.getElementById("footer-container").innerHTML = data;
