--- a/contacts.html
+++ b/contacts.html
@@ -43,11 +43,7 @@
     <div id="footer-container"></div>
     <script src="./js/main.js"></script>
     <script>
-      fetch("/footer.html")
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById("footer-container").innerHTML = data;
-        });
+        loadFooter();
         loadNavbar();
     </script>
 
