--- a/projects/cs2d.html
+++ b/projects/cs2d.html
@@ -48,11 +48,7 @@
     <div id="footer-container"></div>
     <script src="./js/main.js"></script>
     <script>
-      fetch("/footer.html")
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById("footer-container").innerHTML = data;
-        });
+        loadFooter();
         loadNavbar();
     </script>
   </body>
