--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Portfolio of Santiago Locatelli, Full Stack Developer passionate about learning and creating." />
     <meta name="author" content="Santiago Locatelli" />
     <title>Santiago Locatelli</title>
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
