--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Santiago Locatelli</title>
     <!-- Link to external CSS file -->
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
