zoom profile photo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <ul class="content-list">
           <li class="content-list__item whoami">
             <div class="whoami__wrapper whoami__vertical">
-              <img src="./img/profile.jpeg" alt="Photo of Santiago Locatelli" class="whoami__photo" />
+              <div class="profile-container">
+                <img src="./img/profile.jpeg" alt="Photo of Santiago Locatelli" class="whoami__photo profile-pic" />
+              </div>
+
               <div class="whoami__text">
                 <h2 class="title-2">Who am I?</h2>
                 <p class="index_text">
