--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,12 @@
         <h2 class="title-1">Projects</h2>
         <ul class="projects">
           <li class="project">
+            <a href="./projects/creeps-game.html" class="project__link">
+              <img src="./img/projects/creeps-game.png" alt="Creeps Game" class="project__img" />
+              <h3 class="project__title">Creeps Game</h3>
+            </a>
+          </li>
+          <li class="project">
             <a href="./projects/cs2d.html" class="project__link">
               <!-- <a href="https://github.com/SantiagoLocatelli/Counter-Strike-2D" target="_blank" class="project__link"> -->
               <img src="./img/projects/cs2d.png" alt="Counter-Strike 2D" class="project__img" />
