--- a/projects/cdg.html
+++ b/projects/cdg.html
@@ -45,7 +45,7 @@
     </main>
 
     <div id="footer-container"></div>
-    <script src="./js/main.js"></script>
+    <script src="/js/main.js"></script>
     <script>
         loadFooter();
         loadNavbar();
