--- a/projects/creeps-game.html
+++ b/projects/creeps-game.html
@@ -52,7 +52,7 @@
     </main>
 
     <div id="footer-container"></div>
-    <script src="./js/main.js"></script>
+    <script src="/js/main.js"></script>
     <script>
         loadFooter();
         loadNavbar();
