--- a/projects/uba.html
+++ b/projects/uba.html
@@ -46,7 +46,7 @@
     </main>
 
     <div id="footer-container"></div>
-    <script src="./js/main.js"></script>
+    <script src="/js/main.js"></script>
     <script>
         loadFooter();
         loadNavbar();
