--- a/projects/cs2d.html
+++ b/projects/cs2d.html
@@ -47,7 +47,7 @@
     </main>
 
     <div id="footer-container"></div>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
     <script>
         loadFooter();
         loadNavbar();
