--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,8 @@
 <nav class="nav">
     <div class="container">
     <div class="nav-row">
-        <a href="/index.html" class="logo"><strong>Santiago Locatelli</strong></a>
+        <a href="/resume/index.html" class="logo"><strong>Santiago Locatelli</strong></a>
+        <!-- <a href="/index.html" class="logo"><strong>Santiago Locatelli</strong></a> -->
         <button class="dark-mode-btn">
         <!-- <img src="/img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon" />
         <img src="/img/icons/moon.svg" alt="Dark mode" class="dark-mode-btn__icon" /> -->
